--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
+    "firebase-admin": "^11.0.1",
+    "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "dotenv": "^16.0.1",
-    "firebase-admin": "^11.0.1",
-    "mongoose": "^6.6.0"
+    "react-dom": "^16.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
